--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script src="https://apis.openapi.sk.com/tmap/vectorjs?version=1&appKey="></script>
+    
+    <script src="https://apis.openapi.sk.com/tmap/vectorjs?version=1&amp;appKey=%REACT_APP_TMAP_API_KEY%"></script>
+    <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API_KEY%&libraries=services"></script>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <title>React App</title>
   </head>
