--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,6 +29,23 @@
     <script src="https://apis.openapi.sk.com/tmap/vectorjs?version=1&amp;appKey=%REACT_APP_TMAP_API_KEY%"></script>
     <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API_KEY%&libraries=services"></script>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <style>
+      @keyframes blink {
+        0% {
+          opacity: 1;
+        }
+        50% {
+          opacity: 0;
+        }
+        100% {
+          opacity: 1;
+        }
+      }
+      
+      #boxTmapMarker {
+        animation: blink 1s infinite;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
