--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,6 +29,8 @@
     <script src="https://apis.openapi.sk.com/tmap/vectorjs?version=1&amp;appKey=%REACT_APP_TMAP_API_KEY%"></script>
     <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API_KEY%&libraries=services"></script>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script charset="UTF-8" src="https://t1.daumcdn.net/mapjsapi/js/libs/services/1.0.2/services.js"></script>
+    <script charset="UTF-8" src="https://t1.daumcdn.net/mapjsapi/js/main/4.4.11/kakao.js"></script>
     <!-- <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.2.0/kakao.min.js" integrity="sha384-x+WG2i7pOR+oWb6O5GV5f1KN2Ko6N7PTGPS7UlasYWNxZMKQA63Cj/B2lbUmUfuC" crossorigin="anonymous"></script> -->
     <style>
       @keyframes blink {
